# zeitgeist

./: .gitignore  CMakeLists.txt  README.md  backup.ps1  building-under-linux.md  building-under-windows-11-visual-studio-2022.md  building-under-windows-11-visual-studio-community-2022.md
Documentation/: zeitgeist.md
Interpreter/: CMakeLists.txt  Main.c
Libraries/idlib-math/: CMakeLists.txt  README.md  building-under-linux.md  building-under-windows-11-visual-studio-2022.md  integrating-into-cmake-projects.md
Libraries/idlib-math/documentation/: idlib-math.md  matrix.md  vector.md
Libraries/idlib-math/documentation/color/: idlib_color_3_u8_set.md
Libraries/idlib-math/documentation/matrix/: idlib_matrix_4x4_determinant.md  idlib_matrix_4x4_f32.md  idlib_matrix_4x4_f32_add.md  idlib_matrix_4x4_f32_multiply.md  idlib_matrix_4x4_f32_set_identity.md  idlib_matrix_4x4_f32_set_zero.md  idlib_matrix_4x4_f32_subtract.md  idlib_matrix_4x4_f32_transpose.md  idlib_matrix_4x4_set_rotation_x.md  idlib_matrix_4x4_set_rotation_y.md  idlib_matrix_4x4_set_rotation_z.md  idlib_matrix_4x4_set_scale.md  idlib_matrix_4x4_set_translate.md
Libraries/idlib-math/documentation/vector/: idlib_vector_2_f32.md  idlib_vector_2_f32_add.md  idlib_vector_2_f32_are_equal.md  idlib_vector_2_f32_set.md  idlib_vector_2_f32_subtract.md  idlib_vector_2_f32_zero.md  idlib_vector_3_f32.md  idlib_vector_3_f32_add.md  idlib_vector_3_f32_cross.md  idlib_vector_3_f32_get_data.md  idlib_vector_3_f32_length.md  idlib_vector_3_f32_negate.md  idlib_vector_3_f32_normalize.md  idlib_vector_3_f32_set.md  idlib_vector_3_f32_squared_length.md  idlib_vector_3_f32_zero.md  idlib_vector_3_lerp.md  idlib_vector_4_f32.md  idlib_vector_4_f32_add.md  idlib_vector_4_f32_are_equal.md  idlib_vector_4_f32_length.md  idlib_vector_4_f32_negate.md  idlib_vector_4_f32_normalize.md  idlib_vector_4_f32_set.md  idlib_vector_4_f32_subtract.md  idlib_vector_4_f32_zero.md
Libraries/idlib-math/test/matrix_4x4/: CMakeLists.txt
Libraries/idlib-math/test/vector_2/: CMakeLists.txt
Libraries/idlib-math/test/vector_2/sources/: main.c
Libraries/idlib-math/test/vector_3/: CMakeLists.txt
Libraries/idlib-math/test/vector_4/: CMakeLists.txt
Renditions/Demo-Hello-World/: README.txt
Renditions/Demo-Hello-World/Sources/: Main.c
Renditions/Demo-Quadriliteral/: CMakeLists.txt  README.txt
Renditions/Hello-World/: CMakeLists.txt  Main.c  README.txt
Renditions/Hello-World-OpenGl/: CMakeLists.txt  Main.c  README.txt  ServiceGlx.c  ServiceGlx.h  ServiceOpenGl.c  ServiceOpenGl.h  ServiceWgl.c  ServiceWgl.h
Renditions/Hello-World-OpenGl/Sources/: Main.c
Renditions/Hello-World/Sources/: Main.c
Renditions/OpenGl-Commons/: CMakeLists.txt  KeyboardKeyMessage.c  KeyboardKeyMessage.h  Matrix4R32.c  Matrix4R32.h  README.md  README.txt  ServiceGl.c  ServiceGl.h  ServiceGl_Functions.i  ServiceGlx.c  ServiceGlx.h  ServiceWgl.c  ServiceWgl.h  Vector3R32.c  Vector3R32.h
Renditions/OpenGl-Commons/Documentation/: lights.md
Renditions/OpenGl-Commons/Sources/: Commons.c  Commons.h  KeyboardKeyMessage.c  KeyboardKeyMessage.h  Matrix4F32.c  Matrix4F32.h  Matrix4R32.c  Matrix4R32.h  RenderBuffer.c  RenderBuffer.h  ServiceGl.c  ServiceGl.h  ServiceGl_Functions.i  ServiceGlx.h  ServiceWgl.c  Vector3F32.c  Vector3F32.h  Vector3R32.c  Vector3R32.h  Vector4F32.c  Vector4F32.h
Renditions/OpenGl-Commons/Sources/Visuals/: BlinnPhongMaterial.c  BlinnPhongMaterial.h  Context.c  Context.h  DefaultPrograms.c  DefaultPrograms.h  Material.c  Material.h  Object.c  Object.h  PhongMaterial.c  PhongMaterial.h  Program.c  Program.h  RenderBuffer.c  RenderBuffer.h  Service.c  Service.h  Service.package.c  Service.package.h  VertexBuffer.c  VertexBuffer.h
Renditions/OpenGl-Commons/Sources/Visuals/Gl/: Context.c  Context.h  Program.c  Program.h  RenderBuffer.c  RenderBuffer.h  ServiceGl.c  ServiceGl.h  ServiceGl_Functions.i  Texture.c  Texture.h  VertexBuffer.c  VertexBuffer.h
Renditions/OpenGl-Commons/Sources/Visuals/Gl/Glx/: Service.c  Service.h  ServiceGlx.c  ServiceGlx.h  VideoMode.c  VideoMode.h
Renditions/OpenGl-Commons/Sources/Visuals/Gl/Wgl/: Service.c  Service.h  ServiceWgl.c  ServiceWgl.h
Renditions/Room/: CMakeLists.txt  README.txt
Renditions/Room-OpenGl/: CMakeLists.txt  README.txt
Renditions/Room-OpenGl/Sources/: Main.c  Player.c  Player.h  World.c  World.h
Renditions/Room/Assets/: material1.ddl
Renditions/Room/Sources/: Loader.h  Main.c  Player.c  World.c  World.h  notes.md
Renditions/Visuals/: CMakeLists.txt
Renditions/Visuals/Sources/: ColorRGBAU8.c  ColorRGBAU8.h  ColorRGBU8.c  ColorRGBU8.h  KeyboardKeyMessage.c  KeyboardKeyMessage.h  Matrix4F32.c  Matrix4F32.h  MouseButtonMessage.c  MouseButtonMessage.h  MousePointerMessage.c  MousePointerMessage.h  Vector3F32.c  Vector3F32.h  Vector4F32.c  Vector4F32.h
Renditions/Visuals/Sources/Visuals/: BlinnPhongMaterial.c  BlinnPhongMaterial.h  BlinnPhongMaterialTechnique.c  BlinnPhongMaterialTechnique.h  Context.c  Context.h  Material.c  Material.h  MaterialTechnique.c  MaterialTechnique.h  Object.c  Object.h  PhongMaterial.c  PhongMaterial.h  PhongMaterialTechnique.c  PhongMaterialTechnique.h  PixelFormat.c  PixelFormat.h  RenderBuffer.c  RenderBuffer.h  Texture.c  Texture.h  VertexBuffer.c  VertexBuffer.h
